# sandfly

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  SandflyConfig.cmake.in
cmake/: sandfly.cmake
executables/: CMakeLists.txt  sandfly.cc
source/control/: CMakeLists.txt  README.md  batch_executor.cc  batch_executor.hh  butterfly_house.cc  butterfly_house.hh  daq_control.cc  daq_control.hh  egg_writer.cc  monarch3_wrap.cc  monarch3_wrap.hh  node_builder.hh  persistent_store.hh  request_receiver.cc  request_receiver.hh  run_server.cc  run_server.hh  server_config.cc  server_config.hh  stream_manager.cc  stream_manager.hh  stream_preset.cc  stream_preset.hh
source/utility/: CMakeLists.txt  locked_resource.hh  message_relayer.cc  message_relayer.hh  sandfly_constants.hh  sandfly_error.cc  sandfly_error.hh  sandfly_version.cc.in  sandfly_version.hh
